# lzw-arc

./: .gitignore  Cargo.toml  Notes.md  README.md  how-to.md  test-compressed  test-file
benches/: archive_bench.rs
src/: lib.rs  main.rs
tests/: compress_test.rs
