[package]
name = "lzw_arc"
version = "0.1.0"
authors = ["AlukardBF <alukard.develop@gmail.com>"]
edition = "2018"

[dependencies]
bitvec = "0.10"
indexmap = "1.0.2"
# tiny-aes-rs = { git = "https://github.com/AlukardBF/tiny_aes_rs" }

[dev-dependencies]
criterion = "0.2"
same-file = "1.0.4"

[[bench]]
name = "archive_bench"
harness = false