[package]
name = "lzw_arc"
version = "0.2.1"
authors = ["AlukardBF <alukard.develop@gmail.com>"]
edition = "2018"
publish = false

[dependencies]
bitvec = "0.10"
indexmap = "1.0"
ring = "0.14"
rand = "0.6"
clap = "2"
small_aes_rs = { git = "https://github.com/AlukardBF/small_aes_rs" }

[dev-dependencies]
criterion = "0.2"
sha-1 = "0.8.1"

[[bench]]
name = "archive_bench"
harness = false